docs/데이터파트/version3.1/API키_발급_가이드.md
# API 키 발급 가이드 — 팀원 각자 받아야 하는 것

> `docs/데이터파트/version3.1/API키_발급_가이드.md` · 2026-09-03 · 이동원(데이터 파트)
> 대상: Qurious 팀 4인 전원

---

## 이 문서를 읽어야 하는 사람

**저장소를 클론하고 무언가 돌리려는데 "키가 없다"는 말을 본 사람** 전부입니다.

`.env` 파일은 `.gitignore` 가 막습니다. 이 저장소는 **PUBLIC** 이라 키를 커밋하면
그 순간 전 세계에 공개됩니다. 그래서 키는 **각자 받아 각자의 `.env` 에 넣어야** 합니다.
제 것을 복사해 드릴 수 없습니다.

> 🔴 **키를 슬랙·카톡·이슈·PR 어디에도 붙여넣지 마세요.** 캡처 한 장이면 새어 나갑니다.
> 화면 공유 중에 `.env` 를 열지 마세요.

---

## 30초 요약 — 무엇부터 하나

```bash
# 1) 견본을 복사한다
cp .env.example .env

# 2) 아래 표를 보고 필요한 키만 받아 채운다 (전부 무료)

# 3) 제대로 들어갔는지 확인한다
python scripts/check_keys.py            # 있는지·모양이 맞는지
python scripts/check_keys.py --live     # 실제로 통하는지까지
```

`check_keys.py` 는 **키 값을 한 글자도 출력하지 않습니다.** 길이와 앞 두 글자만 보여
주므로 화면을 공유해도 안전합니다.

---

## 한눈에 — 무엇이 필요한가

| 키 | 무엇에 쓰나 | 꼭 필요한가 | 발급 | 승인 |
|---|---|---|---|---|
| `KRX_API_KEY` | 시세·지수 수집 | 🔴 **필수** | [openapi.krx.co.kr](https://openapi.krx.co.kr) | **2단계** (아래 참고) |
| `DATA_GO_KR_API_KEY` | 종목 마스터·기업기본·재무 | 선택 | [data.go.kr](https://www.data.go.kr) | 즉시 |
| `DART_API_KEY` | 공시·재무제표 | 선택 | [opendart.fss.or.kr](https://opendart.fss.or.kr/uss/umt/EgovMberInsertView.do) | 즉시 |
| `ECOS_API_KEY` | 국내 거시(금리·환율·물가) | 선택 | [ecos.bok.or.kr](https://ecos.bok.or.kr/api/#/AuthKeyApply) | 즉시 |
| `FRED_API_KEY` | 미국 거시 | 선택 | [fredaccount.stlouisfed.org](https://fredaccount.stlouisfed.org/apikeys) | 즉시 |
| `KOSIS_API_KEY` | 통계청 지표 | 선택 | [kosis.kr/openapi](https://kosis.kr/openapi) | 즉시 |
| `FINANCE_SUPERVISORY_API_KEY` | 예·적금 금리 | 선택 | [finlife.fss.or.kr](https://finlife.fss.or.kr/finlifeapi) | 즉시 |
| `HUGGINGFACE_ACCESS_TOKEN` | 팀 데이터셋 받기 | 🟡 **사실상 필수** | [huggingface.co/settings/tokens](https://huggingface.co/settings/tokens) | 즉시 |
| `NAVER_API_CLIENT_ID`/`SECRET` | 뉴스·카페글 | 선택 | 🚨 **신규 발급 중단** | — |

**대부분의 팀원은 `HUGGINGFACE_ACCESS_TOKEN` 하나면 됩니다.** 시세·재무 자료는 제가
모아서 HuggingFace 로 배포하므로, 받아 쓰기만 한다면 수집용 키는 필요 없습니다.
직접 수집을 해 보고 싶을 때만 나머지를 받으세요.

---

## 키를 어디에 넣나

프로젝트 루트(`Alpha_Stack/`)의 **`.env`** 파일입니다. 없으면 `.env.example` 을 복사해
만듭니다.

```bash
KRX_API_KEY=여기에_받은_키를_붙여넣는다
DART_API_KEY=여기에_받은_키를_붙여넣는다
```

### 읽는 순서는 환경변수 → `.env` → `.key`

`common/secrets.py` 가 이 순서로 찾습니다. **환경변수가 가장 셉니다** — 셸에
`KRX_API_KEY` 를 export 해 두었다면 `.env` 를 고쳐도 그 값이 안 쓰입니다. 이유 없이
옛 키가 계속 쓰인다면 이걸 의심하세요.

```powershell
# PowerShell 에서 환경변수가 잡혀 있는지
$env:KRX_API_KEY
```

### 이름을 조금 다르게 써도 받아 줍니다

코드가 별칭까지 봅니다. 다른 프로젝트에서 쓰던 이름을 그대로 옮겨도 대개 통합니다.

| 정식 이름 | 함께 받는 이름 |
|---|---|
| `KRX_API_KEY` | `KRX_AUTH_KEY` |
| `DART_API_KEY` | `DART_KEY` |
| `ECOS_API_KEY` | `ECOS_KEY` · `BOK_API_KEY` |
| `FRED_API_KEY` | `FRED_KEY` |
| `KOSIS_API_KEY` | `KOSIS_APIKEY` |
| `FINANCE_SUPERVISORY_API_KEY` | `FSS_API_KEY` · `FSS_KEY` |
| `HUGGINGFACE_ACCESS_TOKEN` | `HF_TOKEN` · `HUGGINGFACE_API_KEY` |
| `DATA_GO_KR_API_KEY` | `DATA_GO_KR_API_KEY1` ~ `5` |

---

## 키마다 자세히

### 1. `KRX_API_KEY` — 한국거래소 (🔴 필수)

시세와 지수를 여기서 받습니다. **이것 없이는 학습 데이터 자체가 없습니다.**

#### 🔴 발급이 2단계입니다 — 가장 많이 걸리는 곳

인증키를 받았다고 바로 쓸 수 있는 게 아닙니다.

```
1단계  회원가입 → 인증키 발급         ← 키 문자열이 나온다
2단계  서비스별 "이용신청" → 승인 대기  ← 이걸 안 하면 키가 있어도 401 이다
```

2단계를 건너뛰면 이런 오류를 봅니다.

```
Unauthorized API Call
→ 키는 유효하지만 '주식일별시세' 이용신청이 승인되지 않았습니다.
```

**우리가 쓰는 서비스는 두 개입니다.** 둘 다 신청하세요.

| 서비스 | 무엇 |
|---|---|
| 유가증권·코스닥 일별매매정보 | 종목 시세 (`daily_price`) |
| 지수 일별시세정보 | 지수 시세 (`index_price`) |

승인은 즉시가 아닐 수 있습니다. 마이페이지에서 **승인 상태와 이용기간**을 확인하세요.
이용기간이 지나도 같은 오류가 납니다.

#### 하루 한도 10,000회 — 근거가 명문입니다

> 이용약관 제8조 ④ : *"하나의 키당 1일(매일 0시~24시) 10,000회 이하의 요청으로
> 제한하며, 이를 초과할 경우 서비스가 중지될 수 있다."*

⚠️ 단위가 **계정이 아니라 키**입니다. 팀원이 각자 키를 받으면 팀 전체 총량은 늘지만,
한 사람이 몰아서 돌리면 **그 사람 키만** 막힙니다.

우리 코드는 `common/budget.py` 가 이 한도를 세고 **넘기 전에 스스로 멈춥니다.**
서버가 거절해서 아는 게 아니라 우리가 미리 세서 압니다.

#### `KRX_ID` · `KRX_PW` 는 별개입니다

OpenAPI 로 안 나오는 화면을 긁을 때만 쓰는 **웹사이트 로그인 계정**입니다.
API 키와 다릅니다. 지금 1차 범위에서는 필요 없습니다.

---

### 2. `DATA_GO_KR_API_KEY` — 공공데이터포털

종목 마스터(종목코드 ↔ 법인등록번호 ↔ ISIN), 기업기본정보, 기업재무정보를 받습니다.

#### 발급 절차

```
1. data.go.kr 회원가입
2. 쓰려는 API 를 검색 → "활용신청" 버튼
3. 활용 목적 고르고 신청 → 개발계정은 자동승인 (즉시)
4. 마이페이지 → 데이터활용 → 오픈API → 인증키 확인
```

**활용신청은 API 마다 따로 해야 합니다.** 신청 안 한 API 를 부르면 같은 키라도
`SERVICE_ACCESS_DENIED_ERROR` 로 막힙니다.

우리가 확인한 것 기준으로 **아래 6개를 신청해 두면 충분합니다** (2026-09-03 실측).

| API | 담긴 것 |
|---|---|
| 금융위원회_KRX상장종목정보 | 종목코드 ↔ 법인등록번호 ↔ ISIN 매핑 |
| 금융위원회_기업기본정보 | 상장일·폐지일·감사의견·종업원수 |
| 금융위원회_기업 재무정보 | 매출·영업이익·총자산·부채비율 |
| 금융위원회_주식시세정보 | 일별 시세 (KRX 백업 경로) |
| 금융위원회_지수시세정보 | 지수 시세 |
| 금융위원회_금융회사기본정보 | 금융회사 개요 |

#### 🔴 키가 여러 개 필요하지 않습니다

`.env` 에 `DATA_GO_KR_API_KEY1` ~ `5` 가 있었지만 **다섯 개가 전부 같은 값**입니다
(지문 대조로 확인). 공공데이터포털은 **계정당 인증키 하나**를 주고, 활용신청한 모든
API 에 그 키를 씁니다. API 마다 다른 키가 나오는 게 아닙니다.

앞으로는 **`DATA_GO_KR_API_KEY` 하나**만 쓰세요. 코드는 `1`~`5` 도 별칭으로 받습니다.

#### 🔴 Encoding 키와 Decoding 키 — 여기서 제일 많이 막힙니다

포털이 인증키를 **두 벌**로 줍니다.

| 이름 | 끝 모양 | 언제 쓰나 |
|---|---|---|
| 일반 인증키 **(Encoding)** | `…%3D` | **우리가 쓰는 것.** URL 에 그대로 이어 붙인다 |
| 일반 인증키 (Decoding) | `…==` | 라이브러리가 알아서 인코딩해 줄 때 |

**섞어 쓰면 인증에 실패하는데, 오류 메시지는 "등록되지 않은 키"라고만 나옵니다.**
키가 잘못된 줄 알고 재발급받게 되는 함정입니다.

그리고 Encoding 키를 `urlencode()` 에 넣으면 안 됩니다.

```python
# 🔴 이러면 %3D 가 %253D 로 두 번 인코딩돼 실패한다
url = BASE + "?" + urlencode({"serviceKey": key, "numOfRows": 10})

# ✅ 서비스키는 문자열로 직접 붙이고, 나머지만 인코딩한다
url = f"{BASE}?serviceKey={key}&" + urlencode({"numOfRows": 10})
```

`check_keys.py` 가 이 두 가지(`%25` 포함 · `==` 로 끝남)를 모양 검사에서 잡아 줍니다.

#### 한도

개발계정 **일 10,000회**. 운영계정으로 올리면 늘릴 수 있지만 활용사례 등록이 필요합니다.

---

### 3. `DART_API_KEY` — 금융감독원 OpenDART

공시 원문과 재무제표를 받습니다.

```
https://opendart.fss.or.kr/uss/umt/EgovMberInsertView.do
회원가입 → 인증키 신청 → 메일로 40자 키 수신 (즉시)
```

#### 한도는 "하루 20,000건" 이지만 단정할 수 없습니다

공식 문구가 *"일반적으로는 20,000건 이상"* 이라며 스스로 *"요청 제한이 다르게 설정된
경우"* 단서를 답니다. 10,000 이라는 2차 자료도 있습니다. **내 키의 실제 값은 로그인 후
이용현황에서만 확인됩니다.** 우리 코드는 보수적으로 20,000 으로 세고, 서버가 한도
초과를 알려 오면 그날치를 즉시 소진 처리합니다.

#### 오류 코드로 무엇이 문제인지 알 수 있습니다

| 코드 | 뜻 | 할 일 |
|---|---|---|
| `000` | 정상 | — |
| `010` | 등록되지 않은 키 | 키를 다시 확인 |
| `011` | 사용할 수 없는 키 | 오픈API 이용 등록이 됐는지 확인 |
| `013` | 조회 결과 없음 | **정상입니다.** 그 기간에 공시가 없을 뿐 |
| `020` | 요청 한도 초과 | 내일 |

---

### 4. `ECOS_API_KEY` — 한국은행 경제통계시스템

국내 금리·환율·물가·경기지표를 받습니다.

```
https://ecos.bok.or.kr/api/#/AuthKeyApply
회원가입 → 인증키 신청 → 즉시 발급 (20자 안팎)
```

⚠️ **ECOS 는 지표의 "발표일"을 주지 않습니다.** 기준 시점(`period`)만 줍니다. 그래서
우리 코드는 발표 시차를 규칙으로 계산해 `known_at` 을 만듭니다. 이 규칙을 바꾸면
**다시 수집해야 합니다** — 지난 것을 고쳐 쓸 수 없습니다.

응답의 `INFO-100` 은 인증 실패, `INFO-200` 은 "해당 자료 없음"(정상)입니다.

---

### 5. `FRED_API_KEY` — 세인트루이스 연준

미국 금리·물가·환율·고용을 받습니다.

```
https://fredaccount.stlouisfed.org/apikeys
계정 생성 → API key 요청 → 즉시 발급 (정확히 32자 소문자+숫자)
```

영문 사이트지만 절차가 가장 단순합니다.

---

### 6. `KOSIS_API_KEY` — 국가통계포털

통계청 지표를 받습니다.

```
https://kosis.kr/openapi
회원가입 → 활용신청 → 즉시 발급 (44자 안팎)
```

---

### 7. `FINANCE_SUPERVISORY_API_KEY` — 금융감독원 금융상품통합비교공시

예·적금 금리를 받습니다. 주가 예측에 직접 쓰지는 않고, 화면의 참고 지표입니다.

```
https://finlife.fss.or.kr/finlifeapi
회원가입 → 인증키 발급 (32자 안팎)
```

응답의 `err_cd` 가 `000` 이면 정상입니다.

---

### 8. `HUGGINGFACE_ACCESS_TOKEN` — 🟡 사실상 모두에게 필요

**팀 데이터셋을 받는 통로**입니다. 시세·재무 자료는 제가 모아
`qurious-quant/alphastack-krx-dev` 로 배포하고, 팀원은 이 토큰으로 받아 씁니다.

```
1. huggingface.co 가입
2. 팀장(이동원)에게 계정 이름을 알려주고 조직 초대를 받는다
3. Settings → Access Tokens → New token
   · Type: Read      ← 받아 쓰기만 한다면 Read 로 충분합니다
   · 이름은 아무거나 (예: alphastack-read)
4. `hf_` 로 시작하는 토큰을 복사
```

> 🔴 **`hf_` 로 시작하지 않으면 다른 것을 복사한 것입니다.**

> 🔴 **데이터셋은 private 입니다.** 담긴 것이 KRX 원자료이고 이용약관 제11조 ②가
> 제3자 제공을 금지합니다. **조직 밖으로 파일을 내보내지 마세요.**

받아 쓰는 법은 [이슈 #29](https://github.com/devlee328288/Alpha_Stack/issues/29) 에
있습니다.

---

### 9. `NAVER_API_CLIENT_ID` · `NAVER_API_SECRET_KEY` — 🚨 신규 발급 중단

뉴스·카페글 수집(감성 피처)에 씁니다. 그런데 **지금은 새로 받을 수 없습니다.**

> 네이버 개발자센터 약관 부칙 제2조 ① : *"2026년 7월 30일 24:00를 기점으로 (…)
> Search API (…) 신규 이용 신청 접수를 중단합니다."*

- **7/30 이전에 받은 키가 있다면** 그대로 쓸 수 있습니다. 단 **2027-06-30 24:00** 이
  하드 데드라인입니다.
- **없다면** NAVER Cloud Platform 의 **API HUB** 로 가야 합니다. 인증 헤더가
  `X-NCP-APIGW-API-KEY-ID` / `X-NCP-APIGW-API-KEY` 로 바뀌고 경로도 달라집니다.

> ⚠️ 약관 7.3 ⑤ 가 **쿼터를 늘릴 목적의 다중 키 발급을 금지**합니다.
> "팀원마다 키를 받아 나눠 쓰기" 는 약관 위반이라 설계에서 뺐습니다.

---

## 자주 걸리는 것

| 증상 | 진짜 원인 | 할 일 |
|---|---|---|
| KRX 가 `Unauthorized API Call` | 키는 맞는데 **서비스 이용신청 미승인** | 마이페이지에서 승인·이용기간 확인 |
| 공공데이터포털이 "등록되지 않은 키" | **Decoding 키를 넣었다** | Encoding 키(`%3D` 로 끝남)로 교체 |
| 공공데이터포털이 `SERVICE_ACCESS_DENIED` | 그 API 를 **활용신청 안 했다** | 포털에서 해당 API 활용신청 |
| `.env` 를 고쳤는데 안 바뀐다 | **환경변수가 이기고 있다** | `$env:키이름` 확인 후 지운다 |
| DART 가 `013` | 오류가 아니다 | 그 기간에 공시가 없을 뿐 |
| 키가 잘린 것 같다 | 붙여넣기 누락 | `check_keys.py` 의 길이 검사 |
| 한글이 깨진다 | 파일이 아니라 **읽는 쪽 cp949** | `encoding="utf-8"` 명시 |

---

## 확인 도구

```bash
python scripts/check_keys.py            # 있는지 · 모양이 맞는지 (네트워크 안 씀)
python scripts/check_keys.py --live     # 실제로 통하는지 (키마다 1회 호출)
```

`--live` 는 키마다 하루 한도를 1회씩 씁니다. 10,000회 중 1회라 부담은 없지만,
백필을 돌리는 중이라면 굳이 겹쳐 돌리지 마세요.

**2026-09-03 기준 팀장 환경 실측** — 8개 키가 실호출까지 통과했습니다
(KRX · 공공데이터포털 · DART · ECOS · FRED · KOSIS · 금감원 · HuggingFace).

---

## 이 문서를 고쳐야 할 때

발급 화면은 바뀝니다. **절차가 문서와 다르면 그 자리에서 고쳐 주세요** — 다음 사람이
같은 데서 막힙니다. 고칠 때는 **무엇이 어떻게 달라졌는지**를 함께 적어 주세요.
